fixed problem with long string results of expressions in UNIONS (BUG#10025)